# api-book-part-one

./: .gitignore  README.md
bulk/: league_data.csv  league_data.parquet  performance_data.parquet  readme.md  team_data.parquet  team_player_data.parquet
chapter3/complete/: crud.py  requirements.txt  test_crud.py
chapter3/data/: league_data.csv
chapter4/complete/: main.py  models.py
chapter5/: readme.md
chapter6/complete/: .dockerignore  requirements.txt  test_crud.py  test_main.py
chapter7/: readme.md
chapter7/complete/sdk/: README.md  pyproject.toml
chapter7/complete/sdk/src/swcpy/: swc_client.py  swc_config.py
chapter7/complete/sdk/tests/: test_swcpy.py  test_swcpy_expanded.py
